# bs-aws

./: .gitignore  Makefile  _oasis  bs-aws.opam  opam  setup.ml
lib/: .ocamlformat  NOTES.txt  aws_base.ml  aws_base.mli  aws_common.ml  aws_common.mli  aws_credentials.ml  aws_credentials.mli  aws_elastic_transcoder.ml  aws_elastic_transcoder.mli  aws_lambda.ml  aws_lambda.mli  aws_mediaconvert.ml  aws_mediaconvert.mli  aws_rds.ml  aws_rds.mli  aws_request.ml  aws_request.mli  aws_s3.ml  aws_s3.mli  aws_ses.ml  aws_ses.mli  aws_signature.ml  aws_signature.mli  aws_sns.ml  aws_sns.mli  aws_sqs.ml  aws_sqs.mli  base.ml  base.mli  cloudwatch.ml  cloudwatch.mli  common.ml  common.mli  credentials.ml  credentials.mli  dune  dynamodb.ml  elastic_transcoder.ml  elastic_transcoder.mli  (+23 more)
