opam-version: "2.0"
name: "bs-aws"
version: "5.4"
synopsis: "An incomplete interface to Amazon Web Services"
description: "an incomplete interface to Amazon Web Services"
maintainer: "Jan Rochel <jan@rochel.info>"
authors: [ "Jerôme Vouillon"
           "Jan Rochel" ]
license: "LGPL with OCaml linking exception"
homepage: "https://github.com/besport/bs-aws"
dev-repo: "git+https://github.com/besport/bs-aws.git"
bug-reports: "https://github.com/besport/bs-aws/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "ocaml" {>= "4.01"}
  "base64" {>= "3.0.0"}
  "cryptokit"
  "lwt"
  "lwt_ppx"
  "ocamlfind" {build}
  "cohttp-lwt-unix" {>= "1.0"}
  "yojson" {>= "1.6"}
  "xmlm"
  "ezxmlm"
  "dune" {>= "1.11"}
  "logs"
]
